--- a/component.yaml
+++ b/component.yaml
@@ -1,4 +1,5 @@
 platform: Common
+purpose: Publish
 buildPlatform:
 displayName: "Get Approval via Email"
 description: "Get approval for the publish with a link sent to the specified email address"
